<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="appName">Micopi</string>
    <string name="mainMenuContactPickerButtonDefaultText">Select contact</string>
    <string name="mainMenuContactPickerButtonPluralText">Select contacts</string>
    <string name="contactPreviewImageContentDescription">Generated image</string>
    <string name="contactPreviewPickButtonText">Pick contact</string>
    <string name="contactPreviewNextImageButtonText">Next image</string>
    <string name="contactPreviewPreviousImageButtonText">Previous image</string>
    <string name="contactPreviewSaveButtonText">Save to gallery</string>
    <string name="contactPreviewShareButtonText">Share image</string>
    <string name="mainMenuFlowDescription">
        After selecting a single contact, you will be shown a preview of the generated image.
        You can then choose to apply the image or generate a different variation.
    </string>
    <string name="mainMenuDisclaimer">
        Different flavours of Android might handle phonebook entries
        and contact pictures differently to what this app is prepared for.
        Therefore we recommend making a backup of your contacts, before overwriting images.
    </string>
    <string name="mainMenuLocalizationCopy">
        If this app is not localised in a language that you speak
        or if you feel like you can improve this translation, please contact the developer.
        This app is a one-man project and requires support by the community.
    </string>
    <string name="contactPreviewStoreConfirmationFormat">
        Saved the image on the device.
        \nLocation: %1$s
    </string>
    <string name="contactPreviewStoreImageDescription">
        Generated with Micopi.
    </string>
    <string name="contactPreviewAssignConfirmationFormat">
        %1$s has got a new picture.
    </string>
    <string name="contactPreviewSharingAppChooserTitle">
        Which app would you like to open the generated image with?
    </string>
    <string name="contactPreviewPermissionRequiredMessage">
        The app is not permitted to perform this action.
        \nPlease check your device settings and grant Micopi the appropriate permission.
    </string>
    <string name="genericErrorMessage">An error occurred. Please check the app\'s permissions.</string>
    <string name="generatedImagesExternalPathName" translatable="false">generated_images</string>
    <string name="sharingCacheAuthority" translatable="false">"eu.ezytarget.micopi.fileprovider</string>
    <string name="contactPreviewAssignButtonText">Assign to contact</string>
    <string name="mainMenuCapabilitiesCardLoadingCopy">Connecting to Google Play...</string>
    <string name="mainMenuPurchaseButtonFormat">Buy %1$s - %2$s</string>
    <string name="mainMenuCapabilitiesCardPurchaseCopy">
        Get more out of Micopi with Plus Features.
        \nYou get the option to select multiple contacts or all contacts at once
        and automatically generate images for them.
        \nOn top of that, Plus Features completely disables ads.
        \nThis bundle will also grant you access to upcoming features,
        such as backups and the ability to reset images.
    </string>
    <string name="mainMenuCapabilitiesCardPostPurchaseCopy">Thank you for purchasing Plus Features!</string>
    <string name="batchTitle">Multiple Contacts</string>
    <string name="batchGenerateButtonText">Generate and assign</string>
    <string name="batchSelectedContactsHeader">Selected Contacts</string>
    <string name="batchContactProcessingStateAppendix">…</string>
    <string name="batchContactFailedStateAppendix"> - Failed to assign image</string>
    <string name="batchContactSuccessStateAppendix"> - Done</string>
    <string name="mainMenuPlusAppPurchasedCopy">It looks like you have bought Micopi+ before. Please send an e-mail to hello@easy-target.eu with a proof of purchase, to receive a promo code for this in-app product.</string>
    <string name="mainMenuSendMailButtonText">Send mail</string>
    <string name="plusAppCustomerMailSubject" translatable="false">Micopi In-App Promo Code for Micopi+ Customer</string>
    <string name="plusAppCustomerMailAddress" translatable="false">hello@easy-target.eu</string>
</resources>
