<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main_menu.MainMenuActivity">

    <data>

        <variable
            name="viewModel"
            type="eu.ezytarget.micopi.main_menu.MainMenuViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Scroll Content: -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mainMenuFlowDescription" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{viewModel::onSelectContactButtonClick}"
                android:text="@{viewModel.contactPickerButtonText}"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorAccent" />

            <!-- Capabilities -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.capabilitiesCardCopy}"
                android:visibility="@{viewModel.capabilityViewsVisibility}" />

            <Button
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{viewModel::onPurchaseButtonClick}"
                android:text="@{viewModel.purchaseButtonText}"
                android:visibility="@{viewModel.purchaseButtonVisibility}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mainMenuPlusAppPurchasedCopy"
                android:visibility="@{viewModel.customerPromoVisibility}" />

            <Button
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{viewModel::onSendMailButtonClick}"
                android:text="@string/mainMenuSendMailButtonText"
                android:visibility="@{viewModel.customerPromoVisibility}" />

            <!-- Disclaimer Card, to be replaced in issue #45: -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mainMenuDisclaimer" />

            <!-- Localization Card Child:-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mainMenuLocalizationCopy" />

        </LinearLayout>

    </ScrollView>


</layout>